# cifar-cnn-zoo

./: .gitignore  README.md  constants.py  model_services.py  pyproject.toml  requirements.txt  run.py  runs.txt  test.py  test_safetensor.py  train.py  train_all.py  training_results.txt  upload.py
fine_tuned/: datasets.py  fine_tuned_models.py  modeling_cifar.py  modeling_finetuned.py
mobilenet/: __init__.py  modeling_cifar.py  modeling_cifar100.py
resnet/: __init__.py  modeling_cifar.py  modeling_cifar10.py  modeling_cifar100.py
src/crimson_magick/cifar_zoo/: __init__.py  model_services.py
src/crimson_magick/cifar_zoo/fine_tuned/: datasets.py  fine_tuned_models.py  modeling_cifar.py
src/crimson_magick/cifar_zoo/mobilenet/: __init__.py  modeling_cifar.py
src/crimson_magick/cifar_zoo/resnet/: __init__.py  modeling_cifar.py
src/crimson_magick/cifar_zoo/vgg/: __init__.py  modeling_cifar.py
src/training/: constants.py  evaluation.py  test.py  test_huggingface.py  test_safetensor.py  train.py  train_all.py  upload.py
src/zoo/: constants.py  model_services.py
src/zoo/fine_tuned/: fine_tuned_models.py  modeling_cifar.py
src/zoo/mobilenet/: __init__.py  modeling_cifar.py
src/zoo/resnet/: __init__.py  modeling_cifar.py
src/zoo/vgg/: __init__.py  modeling_cifar.py
vgg/: __init__.py  modeling_cifar.py  modeling_cifar10.py
