[build-system]
requires = ["setuptools >= 68.0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "crimson-cifar-zoo"
version = "0.0.1"
requires-python = ">= 3.11"
dependencies = [
    "numpy>=1.26,<3",
    "torch>=2.10,<3",
    "torchvision>=0.25,<1",
    "timm>=1.0,<2",
    "huggingface_hub>=1.4,<2",
    "safetensors>=0.7,<1"
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/crimsonmagick/cifar-cnn-zoo/"
Issues = "https://github.com/crimsonmagick/cifar-cnn-zoo/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["crimson_magick*"]
namespaces = true